# supply-monad

./: supply-monad.cabal
Control/Monad/Trans/: Supply.hs
supply-monad/: supply-monad.cabal
supply-monad-mtl/: supply-monad-mtl.cabal
supply-monad-mtl/Control/Monad/: Supply.hs
supply-monad-mtl/Control/Monad/Supply/: Class.hs
supply-monad/Control/Monad/Trans/: Supply.hs
