name:          supply-monad
version:       0.1
synopsis:      A monad for giving computations a supply of arbitrary values.
description:
  A monad for giving computations a supply of arbitrary values;
  potential sources for these values include an action in the
  transformed monad and a list.
  .
  This package depends only on transformers; see the
  @supply-monad-mtl@ package for a MonadSupply class with instances
  for the standard mtl monads.
license:       BSD3
license-file:  LICENSE
author:        Elliott Hird
maintainer:    Elliott Hird <penguinofthegods@gmail.com>
category:      Control
build-type:    Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  exposed-modules: Control.Monad.Trans.Supply
  build-depends:
    base == 4.*,
    transformers == 0.2.*
  ghc-options: -Wall
